meta-swi-sdx55/recipes-core/init-ifupdown/files/rules.v6
# Generated by ip6tables-save v1.4.21
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Exceptions from default INPUT policy DROP:
# Allow all traffic from loopback interface
-A INPUT -i lo -j ACCEPT

# Allow traffic on already established connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Allow DNS replies
-A INPUT -p udp -m udp --sport 53 -j ACCEPT

# Approve certain ICMPv6 types
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type echo-reply -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type router-advertisement -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type neighbour-solicitation -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type neighbour-advertisement -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type redirect -j ACCEPT

# Allow SSH, PING and DHCP over usb0 interface
-A INPUT -i usb0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i usb0 -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A INPUT -i usb0 -p udp --dport 67:68 --sport 67:68 -j ACCEPT

# Create more custom rules here, e.g.:
# Allow incoming TCP connections for service port <port> on interface <if>
# -A INPUT -i <if> -p tcp -m tcp --dport <port> -j ACCEPT


COMMIT
